# polychat-core

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: ci.yaml  deploy.yaml
src/: lib.rs  plugin.rs
src/main/: mod.rs
src/plugin/: constants.rs  mod.rs  vtable.rs
src/plugin_manager/: mod.rs
tests/: dummy_plugin.c  plugin.rs  plugin_manager.rs
tests/dummy_plugin/: Cargo.toml  Makefile  dummy_plugin.rs
