[package]
name = "polychat-core"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "Core functionality of PolyChat"
license = "MPL-2.0"

[lib]
name = "polychat_core"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]


[dependencies]
libloading = "0.7.3"
polychat-plugin = "0.3.1"
log = "0.4.14"
walkdir = "2.3.2"
