[package]
name = "dummy-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dummy_plugin"
path = "dummy_plugin.rs"
crate-type = ["cdylib"]


[dependencies]
polychat-plugin = "0.1.2"
libc = "0.2.113"